--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "start:dev": "nodemon index.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -16,7 +20,7 @@
     "morgan": "^1.10.0"
   },
   "keywords": [],
-  "author": "",
+  "author": "JohnRuss",
   "license": "ISC",
   "description": ""
 }
